2001-04-26  Martin Baulig  <baulig@suse.de>

	* stock_demo.c: Removed; this has been moved to libcompat/demos/.

	* Makefile.am: Don't compile the stock_demo as the GnomeStock is
	deprecated and will be moved to libcompat.

2001-02-26  Martin Baulig  <baulig@suse.de>

	* selector_demo.c: Added example for the new pixmap selector mode
	of the GnomeIconEntry.

2001-02-26  Martin Baulig  <baulig@suse.de>

	* stock_demo.c: There is no gnome_stock_new_with_icon_at_size()
	any more.

	* stock_demo.c: Tagged as `before-martin-reverted-it'.

2000-12-08  Martin Baulig  <baulig@suse.de>

	* animator_demo.c, dock_demo.c, mdi_demo.c, stock_demo.c,
	selector_demo.c, winhints_demo.c: Moved here from libgnomeui.

	* test-file-saver.c, test-recently-used.c: Moved here from
	libgnomeui.
