@@ -1,3 +1,7 @@
+2001-04-29  Martin Baulig  <baulig@suse.de>
+
+	* winhints_demo.c: Use the GTK+ API to access our stock icons.
+
 2001-04-26  Martin Baulig  <baulig@suse.de>
 
 	* stock_demo.c: Removed; this has been moved to libcompat/demos/.
